<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardElevation="@dimen/card_elevation_small"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:textColor="@android:color/black"
            android:contentDescription="@string/habit_name"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/horizontal_rule" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium"
                >

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/habit_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@android:color/black"
                    android:contentDescription="@string/habit_count"
                     />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/label_habit_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/label_habit_count"
                    />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/horizontal_rule" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium"
                >

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/habit_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_medium"
                    android:textColor="@android:color/black"
                    android:contentDescription="@string/habit_frequency"
                    />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/label_habit_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/label_habit_frequency"
                    />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/horizontal_rule" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/habit_increment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/increment_habit_count"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>